--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-include": "^1.1.1",
     "gulp-jshint": "^1.10.0",
@@ -30,6 +31,7 @@
     "gulp-wait": "0.0.2",
     "jshint-stylish": "^1.0.1",
     "node-bourbon": "^4.2.1-beta1",
-    "node-neat": "^1.7.1-beta1"
+    "node-neat": "^1.7.1-beta1",
+    "yargs": "^3.31.0"
   }
 }
